--- a/battery-pack-testers.html
+++ b/battery-pack-testers.html
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/battery-pack-testers.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Battery Pack Testers for Lithium Batteries | Indygreen Technologies"/>
+<meta property="og:title" content="Battery Pack Testers for Lithium Batteries | Indygreen"/>
 <meta property="og:description" content="High-precision battery pack testers for lithium batteries — designed for accurate voltage, capacity, performance, and safety testing of assembled battery packs."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/battery-pack-testers.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Battery Pack Testers for Lithium Batteries | Indygreen Technologies"/>
+<meta name="twitter:title" content="Battery Pack Testers for Lithium Batteries | Indygreen"/>
 <meta name="twitter:description" content="Advanced battery pack testers for lithium batteries — ensuring accuracy, reliability, and safety in EVs, BESS, and industrial applications."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/battery-pack-tester.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
