--- a/news-and-events.html
+++ b/news-and-events.html
@@ -18,7 +18,7 @@
 <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
 <!-- Open Graph (Facebook / LinkedIn) -->
-<meta property="og:title" content="Indygreen Technologies – News & Events"/>
+<meta property="og:title" content="News & Events | Indygreen Technologies – Latest Updates"/>
 <meta property="og:description" content="Explore the latest news, media coverage, and events from Indygreen Technologies — pioneers in solar PV, lithium battery, and EV infrastructure solutions in India."/>
 <meta property="og:url" content="https://www.indygreentech.com/news-and-events.html"/>
 <meta property="og:type" content="website"/>
@@ -27,7 +27,7 @@
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Indygreen Technologies – News & Events"/>
+<meta name="twitter:title" content="News & Events | Indygreen Technologies – Latest Updates"/>
 <meta name="twitter:description" content="Get the latest updates, media news, and upcoming events from Indygreen Technologies in the renewable energy sector."/>
 <!-- Optionally add: <meta name="twitter:image" content="https://www.indygreentech.com/assets/images/twitter-news-events.jpg"/> -->
 
