--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Indygreen Technologies – Solar PV & Battery Production Lines</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Indygreen Technologies offers turnkey GW-scale Solar PV panel production lines, lithium cell & battery pack production lines, electric charging infrastructure solutions in India."/>
+  <meta name="description" content="Indygreen Technologies provides turnkey solar PV lines, lithium cell and battery pack production solutions, plus EV charging infrastructure in India."/>
 
   <!-- Meta Keywords -->
   <meta name="keywords" content="solar PV production lines, lithium Cell Production lines, lithium battery pack production, electric charging stations, turnkey solar manufacturing, Indygreentech India"/>
