--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <nav class="navbar navbar-expand-md navbar-light float-right text-right p-0">    
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent" style="display: block;">
 <ul class="navbar-nav">
-<li class="nav-item mr-0"><a href="dumm.html" title="Home" class="nav-link active">Home </a></li>
+<li class="nav-item mr-0"><a href="index.html" title="Home" class="nav-link active">Home </a></li>
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
 <li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
