--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -98,7 +98,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -476,7 +476,7 @@ Your browser does not support the video tag.
 <!-- <div class="col-xl-6 col-lg-6 align-self-center">
 <div class="about__image">
 <div class="about__image-big">
-<img src="img/about-img.jpg" alt="" class="rounded w-100">
+<img src="img/about-img.jpg" lo alt="" class="rounded w-100">
 </div>
 <div class="about__image-small">
 <img src="img/about-3.jpg" alt="">
@@ -497,7 +497,7 @@ Your browser does not support the video tag.
 <!-- Project Block -->
 <div class="project-block-four col-lg-6 col-md-6 col-sm-12">
 <div class="set-img-this-box">
-<img src="img/unit-1.png" alt="Let the sun do the work" title="Let the sun do the work" class="w-100">
+<img src="img/unit-1.png" loading="lazy" alt="Let the sun do the work" title="Let the sun do the work" class="w-100">
 </div>
 <div class="inner-box top-set">
 <span class="count">01</span>
@@ -522,7 +522,7 @@ Your browser does not support the video tag.
 <!-- Project Block -->
 <div class="project-block-four col-lg-6 col-md-6 col-sm-12">
 <div class="set-img-this-box">
-<img src="img/unit-2.png" alt="Future is Electric" title="Future is Electric" class="w-100">
+<img src="img/unit-2.png" loading="lazy" alt="Future is Electric" title="Future is Electric" class="w-100">
 </div>
 <div class="inner-box top-set">
 <span class="count">02</span>
@@ -651,7 +651,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 1 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-1.png" alt="Universal Cut Cells MBB Tabber Stringer" title="Universal Cut Cells MBB Tabber Stringer" class="w-100">
+<img src="img/product-1.png" loading="lazy" alt="Universal Cut Cells MBB Tabber Stringer" title="Universal Cut Cells MBB Tabber Stringer" class="w-100">
 <figcaption>
 <div class="imghvr1-content">
 <h3 class="wt-title"><a href="#">Universal Cut Cells MBB Tabber Stringer</a></h3>
@@ -667,7 +667,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 2 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-2.png" alt="Turnkey Solar PV Reliability Lab" title="Turnkey Solar PV Reliability Lab" class="w-100">
+<img src="img/product-2.png" loading="lazy" alt="Turnkey Solar PV Reliability Lab" title="Turnkey Solar PV Reliability Lab" class="w-100">
 <figcaption>
 <div class="imghvr1-content">
 <h3 class="wt-title"><a href="#">Turnkey Solar PV Reliability Lab</a></h3>
@@ -683,7 +683,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 3 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-3.png" alt="Automatic Laser welding for BESS & Battery Packs" title="Automatic Laser welding for BESS & Battery Packs">
+<img src="img/product-3.png" loading="lazy" alt="Automatic Laser welding for BESS & Battery Packs" title="Automatic Laser welding for BESS & Battery Packs">
 <figcaption>
 <div class="imghvr1-content">     
 <h3 class="wt-title"><a href="#">Automatic Laser welding for BESS & Battery Packs</a></h3>
@@ -699,7 +699,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 4 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-4.png" alt="Battery Cell & Pack Testers" title="Battery Cell & Pack Testers">
+<img src="img/product-4.png" loading="lazy" alt="Battery Cell & Pack Testers" title="Battery Cell & Pack Testers">
 <figcaption>
 <div class="imghvr1-content">     
 <h3 class="wt-title"><a href="#">Battery Cell & Pack Testers</a></h3>
@@ -715,7 +715,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 5 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-5.png" alt="BESS Container Assembly Line & Component Solutions" title="BESS Container Assembly Line & Component Solutions">
+<img src="img/product-5.png" loading="lazy" alt="BESS Container Assembly Line & Component Solutions" title="BESS Container Assembly Line & Component Solutions">
 <figcaption>
 <div class="imghvr1-content">     
 <h3 class="wt-title"><a href="#"> BESS Container Assembly Line & Component Solutions</a></h3>
@@ -731,7 +731,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 6 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-6.png" alt="Cooling Systems for C&I and BESS Solutions" title="Cooling Systems for C&I and BESS Solutions">
+<img src="img/product-6.png" loading="lazy" alt="Cooling Systems for C&I and BESS Solutions" title="Cooling Systems for C&I and BESS Solutions">
 <figcaption>
 <div class="imghvr1-content">     
 <h3 class="wt-title"><a href="#">Cooling Systems for C&I and BESS Solutions </a></h3>
@@ -758,8 +758,8 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 
 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 card_method text-center mb-5">
 <div class="card">
-<img src="img/circule-design/icon-1.png" alt="Card Back" title="Card Back">
-<img src="img/circule-design/icon-1-1.png" class="img-top" alt="Card Front" title="Card Front">
+<img src="img/circule-design/icon-1.png" loading="lazy" alt="Card Back" title="Card Back">
+<img src="img/circule-design/icon-1-1.png" loading="lazy" class="img-top" alt="Card Front" title="Card Front">
 </div>
 
 <span>Concept Discussion</span>
@@ -768,8 +768,8 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 
 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 card_method text-center mb-5">
 <div class="card">
-<img src="img/circule-design/icon-2.png" alt="Card Back" title="Card Back">
-<img src="img/circule-design/icon-2-2.png" class="img-top" alt="Card Front" title="Card Front">
+<img src="img/circule-design/icon-2.png" loading="lazy" alt="Card Back" title="Card Back">
+<img src="img/circule-design/icon-2-2.png" loading="lazy" class="img-top" alt="Card Front" title="Card Front">
 </div>
 
 <span>Recommendation & Configuration</span>
@@ -778,8 +778,8 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 
 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 card_method text-center mb-5">
 <div class="card">
-<img src="img/circule-design/icon-3.png" alt="Card Back" title="Card Back">
-<img src="img/circule-design/icon-3-3.png" class="img-top" alt="Card Front" title="Card Front">
+<img src="img/circule-design/icon-3.png" loading="lazy" alt="Card Back" title="Card Back">
+<img src="img/circule-design/icon-3-3.png" loading="lazy" class="img-top" alt="Card Front" title="Card Front">
 </div>
 
 <span>Factory Visit</span>
@@ -789,8 +789,8 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 
 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 card_method text-center mb-5">
 <div class="card">
-<img src="img/circule-design/icon-4.png" alt="Card Back" title="Card Back">
-<img src="img/circule-design/icon-4-4.png" class="img-top" alt="Card Front" title="Card Front">
+<img src="img/circule-design/icon-4.png" loading="lazy" alt="Card Back" title="Card Back">
+<img src="img/circule-design/icon-4-4.png" loading="lazy" class="img-top" alt="Card Front" title="Card Front">
 </div>
 
 <span>Estimation & Negotiations</span>
