--- a/index.html
+++ b/index.html
@@ -3,38 +3,41 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Title Tag -->
-  <title>Indygreen Technologies – Solar PV & Battery Production Lines</title>
 
-  <!-- Meta Description -->
-  <meta name="description" content="Indygreen Technologies provides turnkey solar PV lines, lithium cell and battery pack production solutions, plus EV charging infrastructure in India."/>
+<!-- Title Tag -->
+<title>Indygreen Technologies – Solar PV & Battery Production Lines</title>
 
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="solar PV production lines, lithium Cell Production lines, lithium battery pack production, electric charging stations, turnkey solar manufacturing, Indygreentech India"/>
+<!-- Meta Description -->
+<meta name="description" content="Indygreen Technologies provides turnkey solar PV lines, lithium cell and battery pack production solutions, plus EV charging infrastructure in India."/>
 
-  <!-- Robots Tag -->
-  <meta name="robots" content="index, follow"/>
+<!-- Meta Keywords -->
+<meta name="keywords" content="solar PV production lines, lithium Cell Production lines, lithium battery pack production, electric charging stations, turnkey solar manufacturing, Indygreentech India"/>
 
-  <!-- Author & Publisher -->
-  <meta name="author" content="Indygreen Technologies"/>
-  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
+<!-- Robots Tag -->
+<meta name="robots" content="index, follow"/>
 
-  <!-- Open Graph (Facebook / LinkedIn) -->
-  <meta property="og:title" content="Indygreen Technologies – Solar & Lithium Solutions"/>
-  <meta property="og:description" content="Providing turnkey solutions in India for Solar PV, lithium batteries, electric vehicle charging infrastructure."/>
-  <meta property="og:url" content="https://www.indygreentech.com/"/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="Indygreen Technologies"/>
-  <!-- Optionally add: <meta property="og:image" content="https://www.indygreentech.com/og-image.jpg"/> -->
+<!-- Author & Publisher -->
+<meta name="author" content="Indygreen Technologies"/>
+<meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Indygreen Technologies – Solar & Lithium Solutions"/>
-  <meta name="twitter:description" content="Turnkey solutions in India for solar PV manufacturing, lithium battery lines, EV charging infrastructure."/>
-  <!-- Optionally add: <meta name="twitter:image" content="https://www.indygreentech.com/twitter-card.jpg"/> -->
+<!-- Open Graph (Facebook / LinkedIn) -->
+<meta property="og:title" content="Indygreen Technologies – Solar & Lithium Solutions"/>
+<meta property="og:description" content="Providing turnkey solutions in India for Solar PV, lithium batteries, electric vehicle charging infrastructure."/>
+<meta property="og:url" content="https://www.indygreentech.com/"/>
+<meta property="og:type" content="website"/>
+<meta property="og:site_name" content="Indygreen Technologies"/>
+<meta property="og:image" content="https://www.indygreentech.com/assets/images/og-image.jpg"/>
+<meta property="og:image:width" content="1200"/>
+<meta property="og:image:height" content="630"/>
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/"/>
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="Indygreen Technologies – Solar & Lithium Solutions"/>
+<meta name="twitter:description" content="Turnkey solutions in India for solar PV manufacturing, lithium battery lines, EV charging infrastructure."/>
+<meta name="twitter:image" content="https://www.indygreentech.com/assets/images/og-image.jpg"/>
+
+<!-- Canonical -->
+<link rel="canonical" href="https://www.indygreentech.com/"/>
 
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
