--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 
 <div class="col-md-4 text-left">
 <ul>
-<li class="list-inline-item border-0"><a href="https://www.linkedin.com/company/indygreen-technologies/" target="_blank"><i class="fa fa-linkedin text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0"><a href="https://www.linkedin.com/company/indygreen-technologies/" target="_blank" rel="nofollow"><i class="fa fa-linkedin text-white" aria-hidden="true"></i></a></li>
+<li class="list-inline-item border-0"><a href="#" rel="nofollow"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
+<li class="list-inline-item border-0"><a href="#" rel="nofollow"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
+<li class="list-inline-item border-0"><a href="#" rel="nofollow"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#" rel="nofollow"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#" rel="nofollow"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#" rel="nofollow"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#" rel="nofollow"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -468,7 +468,7 @@ Your browser does not support the video tag.
 
 <p>With unmatched technical knowledge and commercial expertise, we specialize in delivering innovative, cost-effective, and high-quality factory setup solutions for the solar energy and Lithium Battery Industry. From designing production lines to providing turnkey execution, we ensure that our clients’ factories are established as successful, efficient, and profitable production units.</p>
 <p>
-  We collaborate with global technology leaders, investors, project developers, and government agencies to bring the latest green and renewable technologies to market. Guided by our motto, “Your Green Partner,” we strive to revolutionize industries through sustainable energy innovations that make our planet greener and cleaner.
+  We collaborate with global technology leaders, investors, project developers, and government agencies to bring the latest green and renewable technologies to market. Guided by our motto, “<a href="about-us.html" class="text-success">Your Green Partner</a>,” we strive to revolutionize industries through sustainable energy innovations that make our planet greener and cleaner.
 </p>
 </div>
 <div class="about__button mt-4">
@@ -1160,7 +1160,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <div class="mobile-major-client d-none">
   <div class="container">
     <div class="row">
-<h4 class="text-center w-100 mb-4">Solar</h4>
+<h3 class="text-center w-100 mb-4">Solar</h3>
 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 main-item major-item-carousel">
         <div class="major-item "><img src="img/solar/n1.png" loading="lazy" alt="WAAREE" title="WAAREE" class="w-100">
                 </div>
@@ -1287,7 +1287,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- E-Mobility -->
 <section class="e-mobility d-none">
   <div class="container">
-    <h4 class="text-center w-100 mb-4">E-Mobility</h4>
+    <h3 class="text-center w-100 mb-4">E-Mobility</h3>
     <div class="row">
 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 main-item e-mobility-item">
   <div class="mobility-item"><img src="img/e-mobility/cosmic-battery.png" loading="lazy" alt="Cosmic" title="Cosmic" class="w-100"></div>
