--- a/solar-epc-components.html
+++ b/solar-epc-components.html
@@ -482,7 +482,7 @@ solar encapsulant, solar EVA encapsulant, POE solar encapsulant, EPE solar encap
 <section class="copy-right py-1">
 <div class="container">
 <div class="row">
-<p class="text-center w-100 text-white">Copyright © 2012 INDYGREEN TECHNOLOGIES | All Rights Reserved. <!-- Website Designed &amp; SEO By Webclick® Digital Pvt. Ltd. <a href="https://www.webclickindia.com" class="font-weight-bold text-white" target="_blank" title="Website Designing Company in Delhi India">Website Designing Company India</a>--></p>
+<p class="text-center w-100 text-white">Copyright © 2012 INDYGREEN TECHNOLOGIES | All Rights Reserved. </p>
 </div>
 </div>
 </section>
