--- a/solar-junction-box.html
+++ b/solar-junction-box.html
@@ -506,7 +506,7 @@ solar junction box, photovoltaic junction box, PV junction box supplier, solar p
 <section class="copy-right py-1">
 <div class="container">
 <div class="row">
-<p class="text-center w-100 text-white">Copyright © 2012 INDYGREEN TECHNOLOGIES | All Rights Reserved. <!-- Website Designed &amp; SEO By Webclick® Digital Pvt. Ltd. <a href="https://www.webclickindia.com" class="font-weight-bold text-white" target="_blank" title="Website Designing Company in Delhi India">Website Designing Company India</a>--></p>
+<p class="text-center w-100 text-white">Copyright © 2012 INDYGREEN TECHNOLOGIES | All Rights Reserved. </p>
 </div>
 </div>
 </section>
