--- a/index.html
+++ b/index.html
@@ -1663,7 +1663,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <li class="text-uppercase"><i class="fa fa-check" aria-hidden="true"></i> Xx Tech,Shenzhen China</li>
 <li class="text-uppercase"><i class="fa fa-check" aria-hidden="true"></i> Sunshine Solar, Wuxi, China</li>
 <li class="text-uppercase"><i class="fa fa-check" aria-hidden="true"></i> Wah Logistics, MD, US</li>
-<li class="text-uppercase"><i class="fa fa-check" aria-hidden="true"></i> Eco Tech Solutions, Canada</li>
+<li class="text-uppercase"><i class="fa fa-check" aria-hidden="true"></i> Ecotek Solutions, Canada</li>
 
 </ul>
 </div>
