--- a/index.html
+++ b/index.html
@@ -1838,14 +1838,14 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 
 </main>
 <!-- script -->
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/slick.js"></script>
-<script type="text/javascript" src="js/slick.min.js"></script>
-<script type="text/javascript" src="js/wow.js"></script>
-<script type="text/javascript" src="js/custom.js"></script>
-<script type="text/javascript" src="js/ma5-menu.min.js"></script>
-<script type="text/javascript" src="js/animationCounter.min.js"></script>
+<script type="text/javascript" src="js/jquery.min.js" defer></script>
+<script type="text/javascript" src="js/bootstrap.min.js" defer></script>
+<script type="text/javascript" src="js/slick.js" defer></script>
+<script type="text/javascript" src="js/slick.min.js" defer></script>
+<script type="text/javascript" src="js/wow.js" defer></script>
+<script type="text/javascript" src="js/custom.js" defer></script>
+<script type="text/javascript" src="js/ma5-menu.min.js" defer></script>
+<script type="text/javascript" src="js/animationCounter.min.js" defer></script>
 <script>
     function animateCounter(el) {
       const target = +el.getAttribute("data-target");
