--- a/solar-sealent-and-bonding.html
+++ b/solar-sealent-and-bonding.html
@@ -551,16 +551,16 @@
 
 </main>
 <!-- script -->
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/slick.js"></script>
-<script type="text/javascript" src="js/slick.min.js"></script>
-<script type="text/javascript" src="js/wow.js"></script>
-<script type="text/javascript" src="js/custom.js"></script>
-<script type="text/javascript" src="js/ma5-menu.min.js"></script>
-<script type="text/javascript" src="js/animationCounter.min.js"></script>
+<script type="text/javascript" src="js/jquery.min.js" defer></script>
+<script type="text/javascript" src="js/bootstrap.min.js" defer></script>
+<script type="text/javascript" src="js/slick.js" defer></script>
+<script type="text/javascript" src="js/slick.min.js" defer></script>
+<script type="text/javascript" src="js/wow.js" defer></script>
+<script type="text/javascript" src="js/custom.js" defer></script>
+<script type="text/javascript" src="js/ma5-menu.min.js" defer></script>
+<script type="text/javascript" src="js/animationCounter.min.js" defer></script>
 <!-- Slider Item-->
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
  <script>
     // Hide preloader when page fully loads
     window.addEventListener('load', () => {
